--- a/src/qt/forms/charitydialog.ui
+++ b/src/qt/forms/charitydialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>250</width>
-    <height>347</height>
+    <width>302</width>
+    <height>373</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,11 +16,20 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>-120</x>
-     <y>270</y>
-     <width>341</width>
-     <height>32</height>
+     <x>60</x>
+     <y>290</y>
+     <width>176</width>
+     <height>27</height>
     </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="layoutDirection">
+    <enum>Qt::LeftToRight</enum>
    </property>
    <property name="orientation">
     <enum>Qt::Horizontal</enum>
@@ -28,12 +37,15 @@
    <property name="standardButtons">
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
+   <property name="centerButtons">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QLineEdit" name="charityPercentEdit">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>210</y>
+     <x>30</x>
+     <y>230</y>
      <width>231</width>
      <height>20</height>
     </rect>
@@ -45,8 +57,8 @@
   <widget class="QLineEdit" name="charityAddressEdit">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>240</y>
+     <x>30</x>
+     <y>260</y>
      <width>231</width>
      <height>20</height>
     </rect>
@@ -63,7 +75,7 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>30</x>
      <y>10</y>
      <width>251</width>
      <height>31</height>
@@ -87,17 +99,17 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>15</x>
-     <y>42</y>
-     <width>221</width>
-     <height>181</height>
+     <x>10</x>
+     <y>50</y>
+     <width>281</width>
+     <height>151</height>
     </rect>
    </property>
    <property name="lineWidth">
     <number>1</number>
    </property>
    <property name="text">
-    <string>Stake For Charity allows you to automatically send up to 50% of your stake to another ColossusCoin2 address.  Stake For Charity requires that the staked block recieve 70 confirmations before the transaction is automatically sent. Stake For Charity is not stored in long term memory and must be set each time the wallet is started. </string>
+    <string>Stake For Charity allows you to automatically send up to 50% of your Stake to another ColossusCoin2 address.  Stake For Charity requires that the Staked Block recieve 80 confirmations before the transaction is automatically sent. Stake For Charity is not stored in long term memory and must be set each time the wallet is started. </string>
    </property>
    <property name="alignment">
     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
@@ -109,11 +121,14 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>310</y>
-     <width>91</width>
-     <height>23</height>
+     <x>100</x>
+     <y>330</y>
+     <width>101</width>
+     <height>32</height>
     </rect>
+   </property>
+   <property name="layoutDirection">
+    <enum>Qt::LeftToRight</enum>
    </property>
    <property name="text">
     <string>Disable S4C</string>
