--- a/src/qt/forms/coincontroldialog.ui
+++ b/src/qt/forms/coincontroldialog.ui
@@ -379,7 +379,7 @@
         <height>41</height>
        </rect>
       </property>
-      <layout class="QHBoxLayout" name="horizontalLayoutPanel" stretch="0,0,0,0,0">
+      <layout class="QHBoxLayout" name="horizontalLayoutPanel" stretch="0,0,0,0,0,0,0">
        <property name="spacing">
         <number>14</number>
        </property>
@@ -426,6 +426,35 @@
         </widget>
        </item>
        <item>
+        <widget class="QPushButton" name="pushButtonCustomCC">
+         <property name="text">
+          <string>Select Coins</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="QComboBoxFilterCoins"/>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="lineEditCustomCC">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="baseSize">
+          <size>
+           <width>50</width>
+           <height>0</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
@@ -451,7 +480,7 @@
       <bool>false</bool>
      </property>
      <property name="columnCount">
-      <number>11</number>
+      <number>15</number>
      </property>
      <attribute name="headerShowSortIndicator" stdset="0">
       <bool>true</bool>
@@ -461,12 +490,12 @@
      </attribute>
      <column>
       <property name="text">
-       <string/>
+       <string>Select</string> /** checkbox **/
       </property>
      </column>
      <column>
       <property name="text">
-       <string>Amount</string>
+       <string>Amount</string>  /** amount **/
       </property>
      </column>
 
@@ -475,37 +504,44 @@
        <string>Confirmations</string>
       </property>
       <property name="toolTip">
-       <string>Confirmed</string>
+       <string>Confirmed</string> /** confs **/
       </property>
      </column>
 
      <column>
       <property name="text">
-       <string>Weight</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Label</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Address</string>
+       <string>Age</string>  /** age **/
       </property>
      </column>
 	 
-     <column>
+	 <column>
       <property name="text">
-       <string>Date</string>
+       <string>Weight</string>  /** weight **/
       </property>
      </column>
-	 
-     
-	 
      <column>
       <property name="text">
-       <string>Priority</string>
+       <string>Label</string> /** label **/
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Address</string> /** address **/
+      </property>
+     </column> 
+     <column>
+      <property name="text">
+       <string>Date</string> /** date **/
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Priority</string> /** priority **/
+      </property>
+     </column>
+	 <column>
+      <property name="text"> /** age int 64 invisible **/
+       <string/>
       </property>
      </column>
      <column>
