--- a/src/qt/res/themes/Blackwood/styles.qss
+++ b/src/qt/res/themes/Blackwood/styles.qss
@@ -74,7 +74,7 @@ QStatusBar::item {
 QLabel {
 	color: $text-color;
      font-size: 14px;
-	font
+	background:transparent;
 }
 
 QLabel[error="true"], QLabel[status="error"] {
