--- a/src/qt/res/themes/Default/styles.qss
+++ b/src/qt/res/themes/Default/styles.qss
@@ -19,8 +19,8 @@
 	$main-color-transparent-0 = rgba(0,0,0,10)
 	$main-color-transparent-1 = rgba(0,0,0,20)
 	$main-color-transparent-2 = rgba(0,0,0,10)
-	$shade-transparent-1 = rgba(0,0,0,30)
-	$shade-transparent-2 = rgba(0,0,0,200)
+	$shade-transparent-1 = rgba(255,255,255,100)
+	$shade-transparent-2 = rgba(0,0,0,255)
 	$main-color = #EEFFF5
 	$text-grey-d = #525252
 	$accent-color = rgba(0,0,0,180)
@@ -51,7 +51,7 @@ QGroupBox {
 }
 
 QWidget{
-     font-size: 14px
+    font-size: 14px;
 }
 
 
@@ -73,8 +73,8 @@ QStatusBar::item {
 /* Label */
 QLabel {
 	color: $text-color;
-     font-size: 14px;
-	font
+    font-size: 14px;
+	background: transparent;
 }
 
 QLabel[error="true"], QLabel[status="error"] {
@@ -135,7 +135,7 @@ QFrame#frameCoinControl {
 
 /* Balance value */
 #frame #labelBalance {
-	color: $text-color;
+	color: #2c7d27;
 	font-size: 14px;
      }
     
@@ -166,7 +166,7 @@ QScrollArea {
 	background-color: transparent;
 }
 #scrollAreaWidgetContents > QFrame {
-	background-color: transparent;
+	background-color: rgba(255,255,255,90);
 	border-width: 0px;
 	border-style: none;
 }
@@ -478,7 +478,7 @@ QTreeView::item:selected {
 /* Table Header */
 QHeaderView {
 	color: $brightest-color;
-	background-color: $main-color;
+	background-color: #FFFFFF;
 	border-bottom: 1px solid $accent-color;
 }
 
@@ -501,7 +501,7 @@ QToolTip {
 
 /* Menu Bar */
 QMenuBar {
-	background-color: $text-grey-d;
+	background-color: #DBF5DB;
 	border: none;
 }
 
@@ -511,18 +511,18 @@ QMenuBar::item {
 }
 
 QMenuBar::item:selected { /* when selected using mouse or keyboard */
-	background: $text-color;
-	color: $text-grey-d;
+	background-color: #DBEBF5;
+	color: #FFFFFF;
 }
 
 QMenuBar::item:pressed {
-	background: $text-color;
+	background-color: #DBEBF5;
 }
 
 /* Menu dialog */
 QMenu {
 	color: $text-color;
-	background-color: $text-grey-d;
+	background-color: #DBEBF5;
 }
 
 QMenu::item {
@@ -533,7 +533,7 @@ QMenu::item {
 
 QMenu::item:selected { /* when user selects item using mouse or keyboard */
 	color: $text-grey-d;
-	background-color: $text-color;
+	background-color: #FFFFFF;
 }
 
 /* Checkbox */
